# iceberg-concepts

./: .gitignore  README.md  pyproject.toml
datasets/: yellow_tripdata_2015-01-1.csv
iceberg_meetup_101/: ReadMe.md  quality_layer.py  taxi_nyc_etl.py  utlis.py
